--- a/Epic_Trading/src/index.html
+++ b/Epic_Trading/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Dosis&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://www.paypal.com/sdk/js?currency=USD&client-id=AUVYI9g13On4jEu9m_j0mTSR13YWzKWYMTbrQLhjMdRnmVW0H-LzEAUlrDKrBGyO_yY9utDaOU8fSJO_"></script>
 </head>
 <body>
   <app-root></app-root>
