--- a/Epic_Trading/src/index.html
+++ b/Epic_Trading/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://c.paypal.com; img-src 'self' https://c.paypal.com https://b.stats.paypal.com;"> -->
   <meta http-equiv="Content-Security-Policy" content="script-src * 'unsafe-eval' 'unsafe-inline' 'self' *.paypal.com https://paypal.com *.paypalobjects.com https://paypalobjects.com *.braintreegateway.com https://www.gstatic.com; base-uri * 'self' 'unsafe-inline' 'unsafe-eval' *.paypal.com https://paypal.com *.paypalobjects.com https://paypalobjects.com;">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://img.icons8.com/material-outlined/24/combo-chart.png">
   <link href="https://fonts.googleapis.com/css2?family=Dosis&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <script src="https://www.paypal.com/sdk/js?currency=USD&client-id=ATtR4NU9H2qzHVv5AU5Zktgr-uhCRWpTSIoVp_dy6wEKlYKQ0nnyS_hjA5rqQb3itFNztkEcemQoeCxU"></script>
